# CloseAllPositionsFriday-python

./: .env.example  .gitignore  README.md  pyproject.toml  queue_db.sqlite3  test.py
.github/workflows/: DevDeploy.yaml
account_stats/: apps.py  models.py
advanced_challenge_settings/: apps.py  models.py
close_position_friday/: README_DAILY_TASK.md  apps.py  routers.py
close_position_friday/management/commands/: schedule_friday_task.py
close_position_friday/tasks/: __init__.py  close_position_task.py
core/: celery.py  db_router.py  settings.py
equity_data_daily/: apps.py  models.py
libs/: client.py
periodic_trading_export/: apps.py  models.py
platform_accounts/: apps.py  models.py
platform_groups/: apps.py  models.py
